--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 		{% include photos.html %}
 		</ul>
 		<ul class="links">
-			<!-- You can add links (to your social media profiles for example) below -->	
 			<li class="rss"><a rel="alternate" type="application/rss+xml" href="{{ site.env.URL }}feed.xml" title="RSS Feed">RSS Feed</a></li>
 			{% if site.env.SHOW_OFFICIAL_GITHUB == "1" %}
-			<li class="github"><a rel="me" href="https://github.com/maxvoltar/photo-stream" title="Fork on Github">Github</a></li>
+			<li class="github"><a rel="me" href="https://github.com/waschinski/photo-stream" title="Fork on Github">Github</a></li>
 			{% endif %}
 			{% if site.env.TWITTER_USERNAME %}
 			<li class="twitter"><a rel="me" href="https://twitter.com/{{ site.env.TWITTER_USERNAME }}" title="@{{ site.env.TWITTER_USERNAME }} on Twitter">Twitter</a></li>
@@ -24,6 +23,9 @@
 			{% endif %}
 			{% if site.env.INSTAGRAM_USERNAME %}
 			<li class="instagram"><a rel="me" href="https://instagram.com/{{ site.env.INSTAGRAM_USERNAME }}" title="@{{ site.env.INSTAGRAM_USERNAME }} on Instagram">Instagram</a></li>
+			{% endif %}
+			{% if site.env.CUSTOM_LINK_URL and site.env.CUSTOM_LINK_NAME %}
+			<li class="link"><a rel="me" href="{{ site.env.CUSTOM_LINK_URL }}" title="{{ site.env.CUSTOM_LINK_NAME }}">{{ site.env.CUSTOM_LINK_NAME }}</a></li>
 			{% endif %}
 		</ul>
 		{% include javascript.html %}
