added notranslate meta tag, and translation keys to html tag
This should fix #20, in my local dev and on my selfhosted instance the translation in chrome disappeared.


Former-commit-id: b9d6481d1c6765c01956a275bed83c779597a4f7

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ---
 
 <!doctype html>
-<html>
+<html class="notranslate" translate="no">
 {% include head.html %}
 <body>
 	{% assign target = "target" %}
