Add option to reverse image sort by default
Previously, the images where sorted based on when they were taken
from newest to oldest image. This is not alway the wished behaviour
as discussed in #42. Therefore this commit will add a new option in
the .env file which when set will reverse the images upon assignment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
 	{% assign target = "target" %}
 	<ul class="grid" id="{{ target }}">
-		{% assign images = page.images | default: site.static_files | photo_filter %}
+		{% if site.env.DEFAULT_REVERSE_SORT == "1" %}
+			{% assign images = page.images | default: site.static_files | photo_filter | reverse %}
+		{% else %}
+			{% assign images = page.images | default: site.static_files | photo_filter %}
+		{% endif %}
 		{% include photos.html %}
 		</ul>
 		<ul class="links bottom">
