Added condition to load Toastify library only if enabled
Former-commit-id: bf03fca38e28d1af7bef35993bbe3dd95977c4f6

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 			{% endif %}
 		</ul>
 		{% include javascript.html %}
+		{% if site.env.ALLOW_IMAGE_SHARING == "1" %}
 		<script type="text/javascript" src="{{ '/js/toastify.js' | relative_url }}"></script>
+		{% endif %}
 		{% if page.image_slug %}
 			<script src="{{ '/js/photos.js' | relative_url }}" data-photo-id="{{ page.image_slug }}" data-photo-url="{{ page.image_slug | relative_url }}" data-target-id="{{ target }}"></script>
 		{% endif %}
