--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li class="sort"><a rel="me" href="#" title="Reverse sort order">Sort</a></li>
 			{% endif %}
 			{% if site.env.SHOW_RSS_FEED == "1" %}
-			<li class="rss"><a rel="alternate" type="application/rss+xml" href="{{ site.env.URL }}feed.xml" title="RSS Feed">RSS Feed</a></li>
+			<li class="rss"><a rel="alternate" type="application/rss+xml" href="{{ site.env.URL }}/feed.xml" title="RSS Feed">RSS Feed</a></li>
 			{% endif %}
 			{% if site.env.SHOW_OFFICIAL_GITHUB == "1" %}
 			<li class="github"><a rel="me" href="https://github.com/waschinski/photo-stream" title="Fork on Github">Github</a></li>
